2007-07-10  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:

        Remove gtk version check since we now depend on 2.11.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* lib/widgets/ephy-location-entry.c: (cursor_on_match_cb),
	(ephy_location_entry_set_completion):

	Remove gtk version check since we now depend on 2.11.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* lib/widgets/ephy-location-entry.c:
	(ephy_location_entry_finalize), (ephy_location_entry_class_init),
	(ephy_location_entry_construct_contents),
	(ephy_location_entry_init), (ephy_location_entry_set_lock_tooltip):

	Port to new tooltips API.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* lib/widgets/ephy-zoom-action.c: (ephy_zoom_action_class_init):
	* lib/widgets/ephy-zoom-control.c: (ephy_zoom_control_class_init):

        Port to new tooltips API.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/ephy-navigation-action.c: (connect_proxy),
	(ephy_navigation_action_class_init):

	Port to new tooltips API.
	
2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/ephy-fullscreen-popup.c:
	(ephy_fullscreen_popup_set_security_state),
	(ephy_fullscreen_popup_constructor),
	(ephy_fullscreen_popup_finalize):

	Port to new tooltips API.

2007-07-10  Luca Ferretti  <elle.uca@libero.it>

	* data/epiphany.desktop.in.in:

	Use new icon here too 

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/ephy-notebook.c: (ephy_notebook_switch_page_cb),
	(update_tabs_visibility), (ephy_notebook_init),
	(ephy_notebook_finalize), (sync_icon), (sync_label),
	(build_tab_label), (ephy_notebook_set_show_tabs),
	(ephy_notebook_remove):

	Port to new tooltips API.

2007-07-10  Luca Ferretti  <elle.uca@libero.it>

	* data/icons/32x32/apps/Makefile.am:
	* data/icons/32x32/Makefile.am:

	Add 32x32/apps to build. But currently there are no icons.

2007-07-10  Luca Ferretti  <elle.uca@libero.it>

	* configure.ac:
	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/apps/Makefile.am: