@@ -1,5 +1,13 @@
 2007-07-10  Christian Persch  <chpe@gnome.org>
 
+	* src/bookmarks/ephy-bookmark-action.c: (query_tooltip_cb),
+	(connect_proxy), (ephy_bookmark_action_updated),
+	(ephy_bookmark_action_class_init):
+
+	Port to new tooltips API. Fixes bug #347637.
+
+2007-07-10  Christian Persch  <chpe@gnome.org>
+
 	* embed/mozilla/GeckoPrintService.cpp:
 
         Remove gtk version check since we now depend on 2.11.
